# multi-mcp-hub

./: Dockerfile  README.md  app.py  authentication_config.py  authentication_server.py  aws_mcp_server.py  config.py  github_mcp_server.py  gl-mcp-hub.code-workspace  gunicorn.conf.py  healthcheck.sh  mcp_auth_test_server.py  mcp_config.py  middleware.py  pyproject.toml  requirements.txt  server.py  start.sh
config/: app_config.py
mcp-auth-test-server/: README.md  database.py  main.py  mcp_auth.db  mcp_tool_server.py  simple_mcp_app.py  simple_mcp_server.py  start.sh
mcp-auth-test-server/templates/: callback.html  consent.html
mcp_servers/: aws_mcp_server.py  github_mcp_server.py  unified_mcp_server.py
middleware/: auth.py  middleware.py
tools/: aws_tools.py  github_tools.py
utils/: tools_utils.py
