[project]
name = "gl-mcp-hub"
version = "0.1.0"
description = "MCP Hub for GitHub and AWS integrations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.4",
    "fastapi>=0.115.12",
    "mcp[cli]>=1.9.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
