[project]
name = "gl-mcp-hub"
version = "0.1.0"
description = "MCP Hub for GitHub and AWS integrations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.4",
    "fastapi>=0.115.12",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "uvicorn[standard]>=0.30.0",
    "fastmcp>=2.10.5",
    "gunicorn>=21.2.0",
    "certifi==2025.7.14",
    "cffi==1.17.1",
    "cryptography==45.0.5",
    "pycparser==2.22",
    "wheel==0.45.1",
     "dotenv>=0.9.9",
    "stytch>=13.11.0",
    "sqlalchemy>=2.0.41",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
